--- a/resultado-final/vercel.json
+++ b/resultado-final/vercel.json
@@ -2,7 +2,7 @@
   "redirects": [
     {
       "source": "/",
-      "destination": "/bienvenida.html",
+      "destination": "/home.html",
       "permanent": true
     }
   ]
